@@ -1,3 +1,9 @@
+Thu Jun  9 01:16:23 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
+
+        * ace/RB_Tree.cpp: Fixed overly long ACE_TRACE string literals
+          that were split across lines.  Thanks to Espen Harlinn <espen at
+          harlinn dot no> for reporting this.
+
 Wed Jun  8 21:05:56 UTC 2011  Adam Mitz  <mitza@ociweb.com>
 
         * bin/fuzz.pl:
@@ -252,12 +258,12 @@ Thu May  5 21:38:45 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>
           application code to check, apart from errno.
 
 Wed May  4 15:07:46 UTC 2011  Chad Beaulac <chad.beaulac@objectivesolutions.com>
-        * ace/Stream.cpp:
-          Modified ACE_Stream::remove(name,flags) so close is always called
-          on the module that's removed regardless of the flags. Close needs
-          to be called to ensure proper lifecycle management when the
-          ACE_Service_Repository shuts down in its fini method.
-          Bugzilla #3912
+  
+	* ace/Stream.cpp: Modified ACE_Stream::remove(name,flags) so close
+          is always called on the module that's removed regardless of the
+          flags. Close needs to be called to ensure proper lifecycle
+          management when the ACE_Service_Repository shuts down in its
+          fini method.  Bugzilla #3912
 
         * tests/Bug_3912_Regression_Test.conf:
         * tests/Bug_3912_Regression_Test.cpp:
